--- a/planning/tickets/SPX-001.md
+++ b/planning/tickets/SPX-001.md
@@ -8,7 +8,9 @@
 
 ## Description
 
-Create the basic PlexEventLoop structure with io_uring initialization and destruction. This establishes the foundation for the async event loop that will drive all Samplex operations.
+Create the basic PlexEventLoop structure with io_uring initialization and
+destruction. This establishes the foundation for the async event loop that will
+drive all Samplex operations.
 
 ## Definition of Done
 
@@ -44,7 +46,9 @@ grep -r "PlexRegistry" apps/spikes/samplex/
 - **SamArena**: Existing memory management
 
 ### File Location
-- Headers: `apps/spikes/samplex/src/plex_uring.h` (internal use, not public API yet)
+
+- Headers: `apps/spikes/samplex/src/plex_uring.h` (internal use, not
+  public API yet)
 - Implementation: `apps/spikes/samplex/src/plex_uring.c`
 - Update: `apps/spikes/samplex/CMakeLists.txt` to include new source file
 
