--- a/planning/tickets/SPX-001.md
+++ b/planning/tickets/SPX-001.md
@@ -1,6 +1,6 @@
 # [SPX-001] Implement PlexEventLoop Core Structure
 
-**Status:** PENDING
+**Status:** DONE
 **Phase:** 1 - Event Loop Foundation
 **Dependencies:** None (foundational ticket)
 
@@ -16,14 +16,14 @@ drive all Samplex operations.
 
 - [x] File: `apps/spikes/samplex/src/plex_uring.c` created
 - [x] File: `apps/spikes/samplex/src/plex_uring.h` created
-- [ ] Functions implemented:
-  - [ ] `plex_event_loop_create(PlexRegistry* registry)`
-  - [ ] `plex_event_loop_destroy(PlexEventLoop* loop)`
-- [ ] Includes proper Apache 2.0 license headers
-- [ ] io_uring ring properly initialized with configurable queue depth
-- [ ] Proper cleanup in destroy function
-- [ ] Code compiles without warnings
-- [ ] Basic validation test added to main.c
+- [x] Functions implemented:
+  - [x] `plex_event_loop_create(PlexRegistry* registry, uint32_t queue_depth)`
+  - [x] `plex_event_loop_destroy(PlexEventLoop* loop)`
+- [x] Includes proper Apache 2.0 license headers
+- [x] io_uring ring properly initialized with configurable queue depth
+- [x] Proper cleanup in destroy function
+- [x] Code compiles without warnings
+- [x] Basic validation test added to main.c
 
 ---
 
